Schachtelung der Bewegungsabfrage und Rückmeldung